# fincride

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  pyproject.toml
.github/workflows/: django.yml
fincride/api/pricing/: constants.py  openapi.py  serializers.py  services.py  urls.py  views.py
fincride/config/: settings.py  urls.py
fincride/core/: README.md
fincride/tests/e2e/: test_integration.py
fincride/tests/functional/: test_services.py
