[tool.poetry]
name = "fincride"
version = "0.1.0"
description = "Pricing algorithm for ride-hailing app"
authors = ["50-Course <eridotdev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
django-rest-framework = "^0.1.0"
drf-spectacular = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
